--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity_ItemCategory"></activity>
+        <activity android:name=".Activity_DealsDisplay"></activity>
+        <activity android:name=".Activity_ItemCategory" />
         <activity android:name=".Activity_Order" />
         <activity android:name=".Activity_AddDeal" />
         <activity android:name=".Activity_UpdateDeals" />
