--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mybaremplyees"
-    >
+    package="com.example.mybaremplyees">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
 
     <application
         android:allowBackup="true"
@@ -15,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity_DealsDisplay"></activity>
+        <activity android:name=".Activity_ViewOrder"></activity>
+        <activity android:name=".Activity_DealsDisplay" />
         <activity android:name=".Activity_ItemCategory" />
         <activity android:name=".Activity_Order" />
         <activity android:name=".Activity_AddDeal" />
